<resources>
    <string name="app_name">SmartLockProject</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_logged_in">SmartLockProject</string>

    <string name="username_text"></string>
    <string name="password_text"></string>
    <string name="hint_username">Enter Username</string>
    <string name="hint_password">Enter Password</string>

    <string name="logout_text">Log Out</string>
    <string name="login_text">Log In</string>

    <string name="menu_login">Login</string>
    <string name="menu_lockstatus">Lock Controls</string>
    <string name="menu_newuser">Create New User</string>
    <string name="menu_alerts">Alerts</string>
    <string name="title_activity_alerts">alertsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_control">controlActivity</string>
    <string name="title_activity_newuser">newuserActivity</string>
    <string name="hash_output"></string>

</resources>
