<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_login"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/menu_login"
        />

    <item
        android:id="@+id/menu_lockstatus"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/menu_lockstatus"
        />

    <item
        android:id="@+id/menu_newuser"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/menu_newuser"
        />

    <item
        android:id="@+id/menu_alerts"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/menu_alerts"
        />

</menu>
